2004-06-12 Borut Razem <borut.razem@siol.net>
	* cli/viewable.cc: #warning not recognised by MSVC
	* eXdbm/eXdbm.vcproj, gui/gui.vcproj, modules.vcproj:
	  new project files for GUI support
	* gpsim.sln, gpsim/gpsim.vcproj, cli/cli.vcproj, src/src.vcproj:
	  GUI support
	* plat/win32/gpsim.def, plat/win32/modules.def: WIN32 def files for
	  DLL modules support
	* plat/win32/glist.cpp: added g_win32_error_message() for --disable-gui
	* cli/input.c: define gpsim_rl_getc() only if defined HAVE_READLINE &&
	  defined HAVE_GUI

2004-06-09 Scott Dattalo <scott@dattalo.com>
	* cli/expr.cc, cli/expr.h, cli/viewable.h, cli/viewable.cc, 
	cli/operator.h, cli/operator.cc: New files to support parsing
	* cli/parse.yy, cli/scan.ll: added new parsing and lexing rules
	for expression parsing.
	* src/stimuli.cc: Manuel Boyer found and fixed a bug where the
	a named stimulus was ignoring its newly assigned name.

2004-06-09 Scott Dattalo <scott@dattalo.com>
	* cli/parse.yy, cli/scan.ll, cli/misc.h, cli/cmd_stimulus.cc, cli/command.h
	Cleaned up the parser by removing the explicit YYABORT and YYACCEPT macros.
	Also, redesigned the parser implementation of the stimulus command.
	
2004-06-03 Scott Dattalo <scott@dattalo.com>
	* examples/12bit/it_12bit.asm: removed
	* regressions/instructions_12bit/instructions_12bit.asm: added
	* regressions/instructions_12bit/instructions_12bit.stc: added
	Now the 12bit core has a regression test.
	
2004-06-05 Scott Dattalo <scott@dattalo.com>
	* src/eeprom.cc: The eeprom memory access object was not getting
	initialized.
	* src/stimuli.cc: applied patch from Manuel Boyer. The IO_open_collector
	was duplicating the base class' job of setting the pin name.
	
2004-06-02 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_break.cc, src/processor.cc: 18fxxx addressing was broken.
	(the divide by 2 issue for the 18f addressess was not being handled
	correctly.)
	
2004-06-01 Scott Dattalo <scott@dattalo.com>