@@ -1,5 +1,0 @@
-/* Define if you have the gui   */
-#undef HAVE_GUI
-#undef PACKAGE
-#undef VERSION
-#undef HAVE_LIBREADLINE
